--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/logo3.png" />
+    <link rel="icon" href="/src/assets/logo3.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RockShare</title>
+    <title>Rock Share</title>
   </head>
   <body>
     <div id="app"></div>
